--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,39 @@
   // See https://go.microsoft.com/fwlink/?LinkId=733558
   // for the documentation about the tasks.json format
   "version": "0.1.0",
-  "command": "tsc",
-  "isShellCommand": true,
-  "args": ["-p", "."],
-  "showOutput": "silent",
-  "problemMatcher": "$tsc",
+  "tasks": [
+    {
+      "taskName": "tsc",
+      "command": "tsc",
+      "isShellCommand": true,
+      "args": [
+        "-p",
+        "."
+      ],
+      "showOutput": "silent",
+      "problemMatcher": "$tsc",
+      "echoCommand": true,
+      "isBuildCommand": true
+    },
+    {
+      "taskName": "mocha",
+      "isBackground": false,
+      "isShellCommand": false,
+      "showOutput": "always",
+      "isTestCommand": true,
+      "command": "node",
+      "echoCommand": true,
+      "args": [
+        "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+        "-u",
+        "tdd",
+        "--timeout",
+        "999999",
+        "--colors",
+        "--watch",
+        "${workspaceRoot}/bin/**/**.spec.js"
+      ]
+    }
+  ]
+  
 }
