run tsc in watch mode

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,8 +6,10 @@
     {
       "taskName": "tsc",
       "command": "tsc",
+      "isBackground": true,
       "isShellCommand": true,
       "args": [
+        "-w",
         "-p",
         "."
       ],
