--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "directories": {
-  },
+  "directories": {},
   "scripts": {
     "start": "node index.js",
     "test": "mocha"
@@ -13,6 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.1.6",
     "mocha": "^3.3.0",
     "ts-node": "^3.0.2",
     "typings": "^2.1.1"
