--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-watch": "^4.3.11",
     "mocha": "^3.3.0",
     "ts-node": "^3.0.2",
+    "tslint": "^5.2.0",
     "typescript": "^2.3.2",
     "typings": "^2.1.1"
   },
