--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "mocha": "^3.3.0",
     "ts-node": "^3.0.2",
     "tslint": "^5.2.0",
-    "typescript": "^2.3.2",
+    "typescript": "^2.3.4",
     "typings": "^2.1.1"
   },
   "dependencies": {
@@ -34,7 +34,6 @@
     "mocha-cli": "^1.0.1",
     "proxyquire": "^1.7.11",
     "server-address": "^1.0.4",
-    "tsc": "^1.20150623.0",
-    "typescript": "^2.3.1"
+    "tsc": "^1.20150623.0"
   }
 }
