--- a/package.json
+++ b/package.json
@@ -12,28 +12,21 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
-    "gulp": "^3.9.1",
-    "gulp-mocha": "^4.3.1",
-    "gulp-sourcemaps": "^2.6.0",
     "gulp-tslint": "^8.0.0",
-    "gulp-typescript": "^3.1.6",
     "gulp-watch": "^4.3.11",
-    "mocha": "^3.3.0",
     "ts-node": "^3.0.2",
     "tslint": "^5.2.0",
-    "typescript": "^2.4.2",
-    "typings": "^2.1.1"
+    "typescript": "^2.4.2"
   },
   "dependencies": {
     "blue-tape": "^1.0.0",
     "gulp": "^3.9.1",
-    "gulp-mocha": "^4.3.1",
+    "gulp-mocha": "^6.0.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-typescript": "^3.1.6",
-    "mocha": "^3.3.0",
+    "mocha": "^5.2.0",
     "mocha-cli": "^1.0.1",
     "proxyquire": "^1.7.11",
-    "server-address": "^1.0.4",
-    "tsc": "^1.20150623.0"
+    "server-address": "^1.0.4"
   }
 }
